// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AwsS3StorageServiceModule UT input changes should handle bucketName change 2`] = `
"- Expected
+ Received

  Object {
-   "output.bucket-test-bucket-Arn": Object {
-     "value": "aws_s3_bucket.bucket-test-bucket.arn",
+   "output.bucket-changed-bucket-Arn": Object {
+     "value": "aws_s3_bucket.bucket-changed-bucket.arn",
    },
-   "resource.aws_s3_bucket.bucket-test-bucket": Object {
-     "bucket": "test-bucket",
+   "resource.aws_s3_bucket.bucket-changed-bucket": Object {
+     "bucket": "changed-bucket",
      "provider": "aws.123-us-east-1",
    },
  }"
`;

exports[`AwsS3StorageServiceModule UT should CUD 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.bucket-test-bucket-Arn": Object {
+     "value": "aws_s3_bucket.bucket-test-bucket.arn",
+   },
+   "resource.aws_s3_bucket.bucket-test-bucket": Object {
+     "bucket": "test-bucket",
+     "provider": "aws.123-us-east-1",
+   },
+ }"
`;

exports[`AwsS3StorageServiceModule UT should CUD 4`] = `"Compared values have no visual difference."`;

exports[`AwsS3StorageServiceModule UT should CUD 6`] = `
"- Expected
+ Received

- Object {
-   "output.bucket-test-bucket-Arn": Object {
-     "value": "aws_s3_bucket.bucket-test-bucket.arn",
-   },
-   "resource.aws_s3_bucket.bucket-test-bucket": Object {
-     "bucket": "test-bucket",
-     "provider": "aws.123-us-east-1",
-   },
- }
+ Object {}"
`;

exports[`AwsS3StorageServiceModule UT should CUD tags 2`] = `
"- Expected
+ Received

- Object {}
+ Object {
+   "output.bucket-test-bucket-Arn": Object {
+     "value": "aws_s3_bucket.bucket-test-bucket.arn",
+   },
+   "resource.aws_s3_bucket.bucket-test-bucket": Object {
+     "bucket": "test-bucket",
+     "provider": "aws.123-us-east-1",
+   },
+ }"
`;

exports[`AwsS3StorageServiceModule UT should CUD tags 4`] = `"Compared values have no visual difference."`;

exports[`AwsS3StorageServiceModule UT should CUD tags 6`] = `"Compared values have no visual difference."`;

exports[`AwsS3StorageServiceModule UT should handle moduleId change 2`] = `"Compared values have no visual difference."`;
